--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.47",
     "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
