--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build-only": "vite build",
     "dev": "vite",
     "preview": "vite preview",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
@@ -22,12 +24,16 @@
     "@types/node": "^18.14.2",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/coverage-c8": "^0.31.0",
+    "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.1.3",
+    "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.62.0",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "vitest": "^0.31.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-tsc": "^1.2.0"
   }
